ms-catalog-admin - (infra):setup spring boot